--- a/doze/res/xml/doze_settings.xml
+++ b/doze/res/xml/doze_settings.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
      Copyright (C) 2015 The CyanogenMod Project
-                   2018-2019 The LineageOS Project
 
      Licensed under the Apache License, Version 2.0 (the "License"
      you may not use this file except in compliance with the License.
@@ -22,26 +21,23 @@
     <com.android.settingslib.widget.MainSwitchPreference
         android:defaultValue="false"
         android:key="doze_enable"
-        android:title="@string/ambient_enable" />
+        android:title="@string/ambient_display_enable_title" />
 
-    <SwitchPreference
-        android:key="always_on_display"
-        android:disableDependentsState="true"
-        android:title="@string/ambient_display_always_on_title"
-        android:summary="@string/ambient_display_always_on_summary"
-        android:persistent="false" 
-	android:icon="@drawable/ic_display" />
+    <SwitchPreferenceCompat
+        android:key="wake_on_gesture"
+        android:defaultValue="false"
+        android:title="@string/wake_on_gesture_title"
+        android:summary="@string/wake_on_gesture_summary" />
 
     <PreferenceCategory
         android:key="tilt_sensor"
         android:title="@string/tilt_sensor_title">
 
-        <SwitchPreference
-            android:key="gesture_pick_up"
+        <SwitchPreferenceCompat
             android:defaultValue="false"
-            android:title="@string/pick_up_gesture_title"
-            android:summary="@string/pick_up_gesture_summary" 
-            android:icon="@drawable/ic_pickup" />
+            android:key="gesture_pick_up"
+            android:summary="@string/pick_up_gesture_summary"
+            android:title="@string/pick_up_gesture_title" />
 
     </PreferenceCategory>
 
@@ -49,19 +45,17 @@
         android:key="proximity_sensor"
         android:title="@string/proximity_sensor_title">
 
-        <SwitchPreference
+        <SwitchPreferenceCompat
+            android:defaultValue="false"
             android:key="gesture_hand_wave"
-            android:defaultValue="false"
-            android:title="@string/hand_wave_gesture_title"
             android:summary="@string/hand_wave_gesture_summary"
-            android:icon="@drawable/ic_hand" />
+            android:title="@string/hand_wave_gesture_title" />
 
-        <SwitchPreference
-            android:key="gesture_pocket"
+        <SwitchPreferenceCompat
             android:defaultValue="false"
-            android:title="@string/pocket_gesture_title"
+            android:key="gesture_pocket"
             android:summary="@string/pocket_gesture_summary"
-            android:icon="@drawable/ic_pocket" />
+            android:title="@string/pocket_gesture_title" />
 
     </PreferenceCategory>
 
